Fixed: Images on infoScreen not centered

--- a/features/polyExplorer/src/screens/info/info.css
+++ b/features/polyExplorer/src/screens/info/info.css
@@ -23,6 +23,7 @@
 }
 
 .info-screen img {
+    display: block;
     width: 300px;
     margin: 0 auto;
 }
